--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
     "prisma": "^6.15.0",
     "tsx": "^4.20.5",
